<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mf_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.measurement.MeasurementFormFragment">

    <ImageView
        android:id="@+id/icons8_humidity"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="icons8_humidity_52px_1"
        android:src="@drawable/icons8_humidity_52px_1"
        app:layout_constraintBottom_toBottomOf="@+id/mf_humidity"
        app:layout_constraintEnd_toStartOf="@+id/mf_humidity"
        app:layout_constraintTop_toTopOf="@+id/mf_humidity" />

    <ImageView
        android:id="@+id/icons8_snowflake"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="icons8_snowflake_128px_1"
        android:src="@drawable/icons8_snowflake_128px_1"
        app:layout_constraintBottom_toBottomOf="@+id/mf_snowTemperature"
        app:layout_constraintEnd_toStartOf="@+id/mf_snowTemperature"
        app:layout_constraintTop_toTopOf="@+id/mf_snowTemperature" />

    <ImageView
        android:id="@+id/icons8_temperature"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="icons8_temperature_32px_1"
        android:src="@drawable/icons8_temperature_32px_1"
        app:layout_constraintBottom_toTopOf="@+id/mf_snowSpinner"
        app:layout_constraintEnd_toStartOf="@+id/mf_temperature"
        app:layout_constraintTop_toBottomOf="@+id/mf_snowTemperature" />

    <EditText
        android:id="@+id/mf_humidity"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:autofillHints="@string/humidity"
        android:ems="10"
        android:hint="@string/humidity"
        android:inputType="numberSigned"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="@+id/mf_snowSpinner"
        app:layout_constraintStart_toStartOf="@+id/mf_temperature"
        app:layout_constraintTop_toBottomOf="@+id/mf_btnDatePicker" />

    <Spinner
        android:id="@+id/mf_TestTypeSpinner"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:contentDescription="@string/testType"
        app:layout_constraintBottom_toTopOf="@+id/mf_snowTemperature"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mf_textView1" />

    <Button
        android:id="@+id/mf_btnTimePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="showTimePickerDialog"
        android:text="@string/mf_pick_time"
        app:layout_constraintEnd_toEndOf="@+id/mf_humidity"
        app:layout_constraintTop_toTopOf="@+id/mf_btnDatePicker" />

    <Button
        android:id="@+id/mf_btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/mf_btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btn_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/mf_snowTemperature"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="7dp"
        android:autofillHints="@string/snow_temperature"
        android:ems="10"
        android:hint="@string/snow_temperature"
        android:inputType="numberSigned"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="@+id/mf_TestTypeSpinner"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="@+id/mf_TestTypeSpinner"
        app:layout_constraintTop_toBottomOf="@+id/mf_TestTypeSpinner" />

    <TextView
        android:id="@+id/mf_textView2"
        android:layout_width="65dp"
        android:layout_height="31dp"
        android:text="@string/snow"
        android:textAlignment="viewEnd"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/mf_snowSpinner"
        app:layout_constraintEnd_toStartOf="@+id/mf_snowSpinner"
        app:layout_constraintTop_toTopOf="@+id/mf_snowSpinner" />

    <Spinner
        android:id="@+id/mf_snowSpinner"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:contentDescription="@string/snow"
        app:layout_constraintEnd_toEndOf="@+id/mf_temperature"
        app:layout_constraintStart_toStartOf="@+id/mf_temperature"
        app:layout_constraintTop_toBottomOf="@+id/mf_temperature" />

    <EditText
        android:id="@+id/mf_temperature"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="7dp"
        android:autofillHints="@string/temperature"
        android:ems="10"
        android:hint="@string/temperature"
        android:inputType="numberSigned"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="@+id/mf_snowTemperature"
        app:layout_constraintStart_toStartOf="@+id/mf_snowTemperature"
        app:layout_constraintTop_toBottomOf="@+id/mf_snowTemperature" />

    <TextView
        android:id="@+id/mf_textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/new_measurement"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/mf_btnDatePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="136dp"
        android:onClick="showTimePickerDialog"
        android:text="@string/mf_pick_date"
        app:layout_constraintEnd_toEndOf="@+id/mf_snowSpinner"
        app:layout_constraintStart_toStartOf="@+id/mf_humidity"
        app:layout_constraintTop_toBottomOf="@+id/mf_snowSpinner" />

    <TextView
        android:id="@+id/mf_twDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="datum"
        app:layout_constraintEnd_toEndOf="@+id/mf_btnDatePicker"
        app:layout_constraintStart_toStartOf="@+id/mf_btnDatePicker"
        app:layout_constraintTop_toBottomOf="@+id/mf_snowSpinner" />

    <TextView
        android:id="@+id/mf_twTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="@+id/mf_btnTimePicker"
        app:layout_constraintStart_toStartOf="@+id/mf_btnTimePicker"
        app:layout_constraintTop_toTopOf="@+id/mf_twDate" />

    <ScrollView
        android:id="@+id/ScrollView01"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/mf_humidity"
        app:layout_constraintStart_toStartOf="@+id/mf_humidity"
        app:layout_constraintTop_toBottomOf="@+id/mf_humidity">

        <EditText
            android:id="@+id/sr_note"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/mfNoteHint"
            android:inputType="text|textMultiLine"
            android:minWidth="32dp"
            android:minHeight="48dp" />

    </ScrollView>

    <Button
        android:id="@+id/mf_bluetooth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bluetooth_open_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ScrollView01" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:text="@string/mf_test_type"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/mf_TestTypeSpinner"
        app:layout_constraintEnd_toStartOf="@+id/mf_TestTypeSpinner"
        app:layout_constraintTop_toTopOf="@+id/mf_TestTypeSpinner" />

    <ImageView
        android:id="@+id/icon_note"
        android:layout_width="32dp"
        android:layout_height="63dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/icons8_note_64px"
        app:layout_constraintEnd_toStartOf="@+id/ScrollView01"
        app:layout_constraintTop_toBottomOf="@+id/mf_humidity" />

</androidx.constraintlayout.widget.ConstraintLayout>