...

    <string name="help">Help</string>
    <string name="sync">Synchronization started</string>
    <!-- Strings related to login -->
    <string name="btn_login">Login</string>
    <string name="login_failure_message">Login fail</string>
    <string name="login_success_message">OK: </string>
    <string name="logout_err_message">Unexpected error </string>
    <!-- Err fragment -->
    <string name="no_connection_text">No internet connection. Try it again</string>
    <string name="btn_retry">Retry</string>
    <!-- home fragment -->
    <string name="hello_home_fragment">Hello here home fragment</string>
...
